♻️ 降级至 Java 8，兼容旧项目